# FinTrack

./: .env.example  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci-cd-tests.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 44febd63633a_initial_migration.py  c1b44166dde2_update_user_models.py
backend/src/fintrack_backend/: __init__.py  __main__.py  config.py  database.py  dependencies.py  main.py
backend/src/fintrack_backend/crud/: __init__.py  user.py
backend/src/fintrack_backend/models/: __init__.py  user.py
backend/src/fintrack_backend/routers/: __init__.py  auth.py  users.py
backend/src/fintrack_backend/schemas/: __init__.py  auth.py  user.py
backend/src/fintrack_backend/security/: jwt.py  password.py
backend/tests/: conftest.py  test_auth_routes.py  test_crud_user.py  test_dependencies.py  test_main.py  test_security.py  test_user_routes.py
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/components/: Modal.tsx  NotificationToast.tsx  Sidebar.tsx
frontend/context/: AuthContext.tsx
frontend/services/: api.ts
frontend/types/: index.ts
