[project]
name = "fintrack_backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fintrack_backend"]

[project.scripts]
dev = "fintrack_backend.__main__:dev"
test = "fintrack_backend.__main__:test"
